--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}Etusivu{% endblock %}
 {% block content %}
 
-<div><h2>Valitse päivän pelaajat</h2></div>
+<div class="h2">Valitse päivän pelaajat (vähintään 4)</div>
 
 <form action="/games" method="POST" onsubmit="check(this)">
     <div class="playerboard">
