--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Rekisteröointi{% endblock %}
 {% block registercontent %}
-<div class="header">
-    <h1>Paistilan Padel</h1>
-</div>
-<h2>{{ message }}</h2>
+<div class="h2">{{ message }}</div>
 <div>
     <form action="/register" method="post" class="login">
         <div ><label for="username">Tunnus:</label></div>
