--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
 {% block title %}Kirjautuminen{% endblock %}
 {% block registercontent %}
-
+<div class="navbanner1">
+    <a class ="registerlink" href="/register">Rekisteröidy</a>
+</div>
 
 <div class="login">
     <form action="/login" method="post">
