--- a/templates/gamestats.html
+++ b/templates/gamestats.html
@@ -1,5 +1,17 @@
 {% extends "seasonstats.html" %}
 {% block statisticcontent %}
+<form class = "calendar" action="/allgames" method="POST">
+      
+    <label class = "calendar-table" for="gameday">:</label>
+    <input type="date" id="gameday" name="gameday"
+       value="2021-10-8"
+       min="2021-01-01" max="2022-12-31">
+    <div class="scorebutton">
+        <input type="submit" value="Etsi">
+        <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
+    </div>
+</form>
+
 <div class = "h2"> Pelit {{ games[0][0].strftime("%m-%d") }}</div>
 {% for g in games %}
     <div class="gameboard">
