--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <div class="h2">Valitse päivän pelaajat (vähintään 4)</div>
 
-<form action="/games" method="POST" onsubmit="check(this)">
+<form action="/games" method="POST" onsubmit="return check(this)">
     <div class="playerboard">
         {% for p in players %}
         <input class ="checkbox" type="checkbox" id="player{{ loop.index }}" name="player" value="{{ p[0] }}">
