--- a/templates/scorestats.html
+++ b/templates/scorestats.html
@@ -3,13 +3,19 @@
 <div class="h2">KAUSITILASTO</div>
 <div class="podiumboard">
     <div></div>
-    <div class = "h2">Voitot</div>
-    <div class = "h2">Häviöt</div>
+    <div class = "h2stats">Piste voitot</div>
+    <div class = "h2stats">Piste häviöt</div>
+    <div class = "h2stats">Peli voitot</div>
+    <div class = "h2stats">Peli häviöt</div>
+    <div class = "h2stats">Pelit</div>
 
     {% for p in podium %}
         <div class = "name"> {{ p[0] }}</div>
         <div class = "points"> {{ p[1] }}</div>
         <div class = "points"> {{ p[2] }}</div>
+        <div class = "points"> {{ p[3] }}</div>
+        <div class = "points"> {{ p[4] }}</div>
+        <div class = "points"> {{ p[3]+p[4] }}</div>
 
     {% endfor %}   
 </div>
