--- a/templates/americano.html
+++ b/templates/americano.html
@@ -1,9 +1,12 @@
 {% extends "layout.html" %}
-{% block title %}Pelit{% endblock %}
+{% block title %}Americano{% endblock %}
 {% block content %}
+<div class="h2">Americano</div>
+<div class="scoreboard">
+    <div class="h2">Kenttä 1</div>
+    <div class="h2">Kenttä 2</div>
+</div>
 <form action="/stats" method="POST">
-{% for r in range(rounds) %}
-    <div class="h2">Kierros {{ r+1 }}</div>
     {% for P in playerchart %}
     <div class="scoreboard">  
         <div class="team">{{ P[0] }} / {{ P[1] }}</div>
@@ -37,10 +40,9 @@
             </select>
         </div>
     </div>
-    {% endfor %}  
-{% endfor %}    
+    {% endfor %}      
     <div class="scorebutton">
-        <input type="hidden" id="hide" name=tournament_id value= "1">
+        <input type="hidden" id="hide" name=tournament_id value= "{{ t_id }}">
         <input id="scorebutton" type="submit" value="Tallenna päivän tulokset">
         <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </div>
