--- a/templates/gamestats.html
+++ b/templates/gamestats.html
@@ -9,15 +9,16 @@
         <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </div>
 </form>
-
-<div class = "h2"> Pelit {{ games[0][0].strftime("%d-%m-%Y") }}</div>
-{% for g in games %}
-    <div class="gameboard">
-        <div class = "team"> {{ g[1] }} / {{ g[2] }}</div>
-        <div class = "team"> {{ g[4] }} / {{ g[5] }} </div>
-        <div class = "points"> {{ g[3] }}</div>
-        <div class = "points"> {{ g[6] }}</div>
-    </div>
-{% endfor %} 
+{% if games %} 
+    <div class = "h2"> Pelit {{ games[0][0].strftime("%d-%m-%Y") }}</div>
+    {% for g in games %}
+        <div class="gameboard">
+            <div class = "team"> {{ g[1] }} / {{ g[2] }}</div>
+            <div class = "team"> {{ g[4] }} / {{ g[5] }} </div>
+            <div class = "points"> {{ g[3] }}</div>
+            <div class = "points"> {{ g[6] }}</div>
+        </div>
+    {% endfor %} 
+{% endif %}
 {% endblock %}
 
