--- a/templates/seasonstats.html
+++ b/templates/seasonstats.html
@@ -3,9 +3,8 @@
 {% block content %}
 <div class="navbanner1">
     <a class ="navlinks1" href="/stats">Kausi</a>
+    <a class ="navlinks4" href="/stats">Americano</a>
     <a class ="navlinks2" href="/allgames">Pelit</a>
-    <a class ="navlinks3" href="/stats">Pelaaja</a>
-    <a class ="navlinks4" href="/stats">Turnaus</a>
 </div>
 
 {% block statisticcontent %}{% endblock %}
