--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
-{% block title %}Etusivu{% endblock %}
+{% block title %}Pelit{% endblock %}
 {% block content %}
 
 <div class="navbanner1">
-    <a class ="navlinks1" href="/">Talvikausi</a>
-    <a class ="navlinks2" href="/americano">Americano</a>
+    <a class ="navlinks2" href="/">Talvikausi</a>
+    <a class ="navlinks3" href="/americano">Americano</a>
 </div>
 
 {% block indexcontent %}{% endblock %}
