--- a/templates/seasonstats.html
+++ b/templates/seasonstats.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="navbanner1">
     <a class ="navlinks1" href="/stats">Kausi</a>
-    <a class ="navlinks4" href="/stats">Americano</a>
+    <a class ="navlinks4" href="/americanostats">Americano</a>
     <a class ="navlinks2" href="/allgames">Pelit</a>
 </div>
 
