--- a/templates/scorestats.html
+++ b/templates/scorestats.html
@@ -1,6 +1,13 @@
 {% extends "seasonstats.html" %}
+{% block navcontent %}
+<div class="navbanner1">
+    <a class ="navlinks1-select" href="/stats">Kausi</a>
+    <a class ="navlinks4" href="/americanostats">Americano</a>
+    <a class ="navlinks2" href="/allgames">Pelit</a>
+</div>
+{% endblock %}
 {% block statisticcontent %}
-<div class="h2">KAUSITILASTO</div>
+<div class="h2-seasonstats">KAUSITILASTO</div>
 <div class="podiumboard">
     <div></div>
     <div class = "h2stats">Piste voitot</div>
