--- a/static/style.css
+++ b/static/style.css
@@ -2,10 +2,9 @@
 body {
     margin: auto;
     max-width: 45em;
-    font-family: 'Helvetica', 'Arial', sans-serif;
     background: rgb(173, 165, 165);
+    font-family: 'Quicksand', sans-serif;
 }
-
 
 .header {
     background: rgb(151, 211, 138);
@@ -16,6 +15,7 @@ body {
     font-size: 1.5em;
     border-radius: .5em;
     margin: 12px;
+    font-family: 'Helvetica', 'Arial', sans-serif;
 }
 
 .h2 {
@@ -24,11 +24,36 @@ body {
     font-weight: bold;
     margin: 1em 0em 0em 0em;
 }
+
 .h2-americano {
     text-align: center;
-    font-size: 1em;
+    font-size: 1.3em;
     font-weight: bold;
-    margin: 1em 0em 0em 0em;
+    margin: 12px;
+    padding: .5em;
+    background: #e3e39e;
+    border-radius: .5em;
+}
+
+.h2-seasonstats {
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: bold;
+    margin: 12px;
+    padding: .5em;
+    background: #e3e39e;
+    border-radius: .5em;
+}
+
+.h2-americano-points{
+    text-align: center;
+    font-size: 1.2em;
+    font-weight: bold;
+    margin: 12px 7em;
+    padding: .5em;
+    background: #e3e39e;
+    border-radius: .5em;
+
 }
 
 .h2stats{
@@ -37,12 +62,14 @@ body {
     font-weight: bold;
     margin: 1em 0em 0em 0em;
 }
+
 .login {
     margin: 12px;
     padding: .5em;
     text-align: center;
     border-radius: .5em;
  }
+
 .dayscores{
     background: rgb(255, 96, 96, 0.562);
     margin: 12px;
@@ -51,7 +78,6 @@ body {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     font-family: 'Quicksand', sans-serif;
-
 }
 
 .scoreboard {
@@ -118,6 +144,9 @@ body {
     font-size: 0.8em;
     text-align: center;
 }
+.tournament-name{
+    text-align: center;
+}
 
 .navbanner{
     display: grid;
@@ -127,7 +156,7 @@ body {
 }
 
 .navbanner1{
-    font-family: 'Quicksand', sans-serif;
+    font-family:'Quicksand', sans-serif;
     margin: 1em 12px 2em 12px;
     text-align: center;
     background: beige;
@@ -146,6 +175,16 @@ body {
     color: black;
 }
 
+.navlinks1-select{
+    border-radius: .5em;
+    text-align: center;
+    background: rgb(247, 221, 137);
+    padding: .5em;
+    margin: .5em .5em .5em 0em;
+    text-decoration: none;
+    color: black;
+    border-style: outset;
+}
 .navlinks2{
     border-radius: .5em;
     text-align: center;
@@ -166,6 +205,17 @@ body {
     color: black;
 }
 
+.navlinks2-select, .navlinks3-select{
+    border-radius: .5em;
+    text-align: center;
+    background: rgb(247, 221, 137);
+    padding: .5em;
+    margin: .5em;
+    text-decoration: none;
+    color: black;
+    border-style: outset;
+}
+
 .navlinks4{
     border-radius: .5em;
     text-align: center;
@@ -175,6 +225,17 @@ body {
     text-decoration: none;
     color: black;
 }
+.navlinks4-select{
+    border-radius: .5em;
+    text-align: center;
+    background: rgb(247, 221, 137);
+    padding: .5em;
+    margin: .5em 0em .5em .5em;
+    text-decoration: none;
+    color: black;
+    border-style: outset;
+}
+
 .navlinks1:focus, .navlinks2:focus, .navlinks3:focus, .navlinks4:focus{
     background: rgb(247, 221, 137);
 }
