--- a/templates/gamestats.html
+++ b/templates/gamestats.html
@@ -1,4 +1,11 @@
 {% extends "seasonstats.html" %}
+{% block navcontent %}
+<div class="navbanner1">
+    <a class ="navlinks1" href="/stats">Kausi</a>
+    <a class ="navlinks4" href="/americanostats">Americano</a>
+    <a class ="navlinks2-select" href="/allgames">Pelit</a>
+</div>
+{% endblock %}
 {% block statisticcontent %}
 <div class="h2">{{ message }}</div>
 <form class = "calendar" action="/allgames" method="POST">
