--- a/templates/indexamericano.html
+++ b/templates/indexamericano.html
@@ -1,10 +1,16 @@
 {% extends "index.html" %}
+{% block navcontent %}
+<div class="navbanner1">
+    <a class ="navlinks2" href="/">Talvikausi</a>
+    <a class ="navlinks3-select" href="/americano">Americano</a>
+</div>
+{% endblock %}
 {% block indexcontent %}
 
-<div class="h2">Valitse päivän pelaajat (vähintään 8)</div>
-
-<form action="/americano" method="POST" onsubmit="return americanocheck(this)">
-    <div>Keksi nimi:<input id ="username" type="text" name="tournament_name" minlength="4" maxlength="10" pattern="[A-Öa-ö]+" placeholder="vain kirjaimia" required></div>
+<div class="h2">Keksi turnaukselle nimi</div>
+<form class = "tournament-name" action="/americano" method="POST" onsubmit="return americanocheck(this)">
+    <div><input id ="username" type="text" name="tournament_name" minlength="4" maxlength="16" pattern="[A-Öa-ö0-9]+" placeholder="kirjaimia tai numeroita" required></div>
+    <div class="h2">Valitse päivän pelaajat (vähintään 8)</div>
     <div class="playerboard">
         {% for p in players %}
         <input class ="checkbox" type="checkbox" id="player{{ loop.index }}" name="player" value="{{ p[0] }}">
@@ -12,7 +18,7 @@
         {% endfor %} 
     </div>
     <div class="scorebutton">
-        <input id= "gamestart" type="submit" value="Aloita pelit">
+        <input id= "button" type="submit" value="Aloita pelit">
         <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </div>
          
