--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,12 +9,7 @@
     </div>
 {% if session.user_id %}
 
-<div class="navbanner">
-    <a class ="navlinks1" href="/">Pelit</a>
-    <a class ="navlinks2" href="/stats">Tilastot</a>
-    <a class ="navlinks3" href="/playerapp">Pelaajat</a>
-    <a class ="navlinks4" href="/logout">Logout</a>
-</div>
+{% block uppernav %} {% endblock %}
 {% block content %}{% endblock %}
 
 {% else %}
