--- a/templates/seasonstats.html
+++ b/templates/seasonstats.html
@@ -1,12 +1,16 @@
 {% extends "layout.html" %}
 {% block title %}Tilastot{% endblock %}
-{% block content %}
-<div class="navbanner1">
-    <a class ="navlinks1" href="/stats">Kausi</a>
-    <a class ="navlinks4" href="/americanostats">Americano</a>
-    <a class ="navlinks2" href="/allgames">Pelit</a>
+{% block uppernav %}
+<div class="navbanner">
+    <a class ="navlinks1" href="/">Pelit</a>
+    <a class ="navlinks2-select" href="/stats">Tilastot</a>
+    <a class ="navlinks3" href="/playerapp">Pelaajat</a>
+    <a class ="navlinks4" href="/logout">Logout</a>
 </div>
+{% endblock %}
+{% block content %}
 
+{% block navcontent %}{% endblock %}
 {% block statisticcontent %}{% endblock %}
 
 {% endblock %}
