--- a/templates/americanostats.html
+++ b/templates/americanostats.html
@@ -1,9 +1,9 @@
 {% extends "seasonstats.html" %}
 {% block navcontent %}
 <div class="navbanner1">
-    <a class ="navlinks1" href="/stats">Kausi</a>
+    <a class ="navlinks1" href="/stats">Talvikausi</a>
     <a class ="navlinks4-select" href="/americanostats">Americano</a>
-    <a class ="navlinks2" href="/allgames">Pelit</a>
+    <a class ="navlinks2" href="/allgames">Pelihistoria</a>
 </div>
 {% endblock %}
 {% block statisticcontent %}
