--- a/templates/indexseason.html
+++ b/templates/indexseason.html
@@ -1,7 +1,7 @@
 {% extends "index.html" %}
 {% block navcontent %}
 <div class="navbanner1">
-    <a class ="navlinks2-select" href="/">Talvikausi</a>
+    <a class ="navlinks2-select" href="/gameindex">Talvikausi</a>
     <a class ="navlinks3" href="/americano">Americano</a>
 </div>
 {% endblock %}
