--- a/templates/scorestats.html
+++ b/templates/scorestats.html
@@ -1,7 +1,7 @@
 {% extends "seasonstats.html" %}
 {% block navcontent %}
 <div class="navbanner1">
-    <a class ="navlinks1-select" href="/stats">Kausi</a>
+    <a class ="navlinks1-select" href="/stats">Talvikausi</a>
     <a class ="navlinks4" href="/americanostats">Americano</a>
     <a class ="navlinks2" href="/allgames">Pelit</a>
 </div>
