--- a/static/style.css
+++ b/static/style.css
@@ -37,7 +37,7 @@ body {
 
 .h2-seasonstats {
     text-align: center;
-    font-size: 1.5em;
+    font-size: 1.3em;
     font-weight: bold;
     margin: 12px;
     padding: .5em;
@@ -60,7 +60,7 @@ body {
     text-align: center;
     font-size: .8em;
     font-weight: bold;
-    margin: 1em 0em 0em 0em;
+    padding: .2em;
 }
 
 .login {
@@ -90,7 +90,7 @@ body {
     font-family: 'Quicksand', sans-serif;
 }
 
-.scoreboard-amercano {
+.scoreboard-americano {
     background: rgb(255, 96, 96, 0.562);
     margin: 12px;
     padding: 1em;
@@ -112,13 +112,14 @@ body {
 
 .podiumboard {
     background: rgb(255, 96, 96, 0.562);
-    margin: 12px;
+    margin: 3.5em 12px;
     border-radius: .5em;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     font-family: 'Quicksand', sans-serif;
-} 
-.points{
+}
+    
+.points{    
     text-align: center;
     margin: auto;
     font-size: 1em;
@@ -386,8 +387,8 @@ form #username{
     background: whitesmoke;
     padding: .3em;
     border-radius: .5em;
-    margin:.5em;
-
+    margin: 0.5em;
+    width: 10em;
 }
 
 form #password{
