--- a/templates/americano.html
+++ b/templates/americano.html
@@ -11,7 +11,7 @@
         {% else %}
             <div class="h2">Kenttä 2</div>
         {% endif %}
-    <div class="scoreboard-amercano">  
+    <div class="scoreboard-americano">  
         <div class="team-americano">{{ P[0] }} / {{ P[1] }}</div>
         <div class="team-americano">{{ P[2] }} / {{ P[3] }}</div>     
         <div class="score-americano">
