--- a/templates/dayscores.html
+++ b/templates/dayscores.html
@@ -1,8 +1,16 @@
 {% extends "layout.html" %}
 {% block title %}Päivän tulokset{% endblock %}
+{% block uppernav %}
+<div class="navbanner">
+    <a class ="navlinks1" href="/gameindex">Pelit</a>
+    <a class ="navlinks2" href="/stats">Tilastot</a>
+    <a class ="navlinks3" href="/playerapp">Pelaajat</a>
+    <a class ="navlinks4" href="/logout">Logout</a>
+</div>
+{% endblock %}
 {% block content %}
 
-<div class="h2">Päivän tulokset</div>
+<div class="h2-seasonstats">Päivän tulokset</div>
 <div class="dayscores">
     {% for d in day_podium %}
         <div class = "name">{{ d[0] }} </div>
