--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,12 +13,8 @@
 {% block content %}{% endblock %}
 
 {% else %}
-<div class="navbanner">
-    <a class ="navlinks1" href="/">Pelit</a>
-    <a class ="navlinks2" href="/stats">Tilastot</a>
-    <a class ="navlinks3" href="/playerapp">Pelaajat</a>
-    <a class ="navlinks4" href="/login">Login</a>
-</div>
+
+{% block navstart %}{% endblock %}
 
 {% block registercontent %}{% endblock %}
 
