--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,16 @@
 {% extends "layout.html" %}
 {% block title %}Kirjautuminen{% endblock %}
+{% block navstart %}
+<div class="navbanner">
+    <a class ="navlinks1" href="/gameindex">Pelit</a>
+    <a class ="navlinks2" href="/stats">Tilastot</a>
+    <a class ="navlinks3" href="/playerapp">Pelaajat</a>
+    <a class ="navlinks4-select" href="/login">Login</a>
+</div>
+{% endblock %}
 {% block registercontent %}
 <div class="navbanner1">
-    <a class ="registerlink" href="/register">Rekisteröidy</a>
+    <a class ="navlinks2" href="/register">Rekisteröidy</a>
 </div>
 
 <div class="login">
