--- a/templates/players.html
+++ b/templates/players.html
@@ -2,10 +2,18 @@
 {% block title %}Pelaajat{% endblock %}
 {% block uppernav %}
 <div class="navbanner">
-    <a class ="navlinks1" href="/">Pelit</a>
+    <a class ="navlinks1" href="/gameindex">Pelit</a>
     <a class ="navlinks2" href="/stats">Tilastot</a>
     <a class ="navlinks3-select" href="/playerapp">Pelaajat</a>
     <a class ="navlinks4" href="/logout">Logout</a>
+</div>
+{% endblock %}
+{% block navstart %}
+<div class="navbanner">
+    <a class ="navlinks1" href="/gameindex">Pelit</a>
+    <a class ="navlinks2" href="/stats">Tilastot</a>
+    <a class ="navlinks3" href="/playerapp">Pelaajat</a>
+    <a class ="navlinks4" href="/login">Login</a>
 </div>
 {% endblock %}
 {% block content %}
@@ -31,4 +39,6 @@
         <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </div>
 </form>
+<div class="h2">{{ error }}</div>
+
 {% endblock %}
