--- a/templates/register.html
+++ b/templates/register.html
@@ -1,15 +1,31 @@
 {% extends "layout.html" %}
 {% block title %}Rekisteröointi{% endblock %}
+{% block navstart %}
+<div class="navbanner">
+    <a class ="navlinks1" href="/gameindex">Pelit</a>
+    <a class ="navlinks2" href="/stats">Tilastot</a>
+    <a class ="navlinks3" href="/playerapp">Pelaajat</a>
+    <a class ="navlinks4" href="/login">Login</a>
+</div>
+{% endblock %}
+
 {% block registercontent %}
 <div class="h2">{{ message }}</div>
+<div class="navbanner1">
+    <a class ="navlinks2-select" href="/register">Rekisteröidy</a>
+</div>
 <div>
     <form action="/register" method="post" class="login">
         <div ><label for="username">Tunnus:</label></div>
-        <div><input type="text" id = "username" name="username" minlength="4" maxlength="12" required></div>
+        <div><input type="text" id = "username" name="username" 
+            minlength="4" maxlength="12" placeholder="Tunnus" required></div>
         <div><label for="password">Salasana:</label></div>
-        <div><input type="password" id = "password" name="password1" minlength="4" maxlength="16" required></div>
+        <div><input type="password" id = "password" name="password1" 
+            pattern= "(?=.*\d)(?=.*[a-ö])(?=.*[A-Ö]).{6,}"
+            minlength="6" maxlength="16" placeholder="Salasana" 
+            title="Vähintään 6 merkkiä ja yksi jokaista: pienikirjain, isokirjain, numero" required></div>
         <div><label for="password">Salasana uudestaan:</label></div>
-        <div><input type="password" id = "password" name="password2" required></div>
+        <div><input type="password" id = "password" name="password2" placeholder="Salasana uudestaan"required></div>
         <div><input id="button" type="submit" value="Luo tunnus"></div>
     </form>
 </div>
