--- a/templates/americano.html
+++ b/templates/americano.html
@@ -19,13 +19,9 @@
             <input type="hidden" id="hide" name="gamedata" value= "{{ P[1] }}">
             <select id="scorewheel" name="gamescore">
                 <option value="0" selected> 0
-                <option value="1"> 1
-                <option value="2"> 2
-                <option value="3"> 3
-                <option value="4"> 4
-                <option value="5"> 5
-                <option value="6"> 6
-                <option value="7"> 7
+            {% for i in range(32) %}
+                <option value="{{ i + 1 }}"> {{ i + 1 }}
+            {% endfor %}    
             </select>
         </div>
         <div class="score-americano">
@@ -33,13 +29,9 @@
             <input type="hidden" id="hide" name="gamedata" value= "{{ P[3] }}">
             <select id="scorewheel" name="gamescore">
                 <option value="0" selected> 0
-                <option value="1"> 1
-                <option value="2"> 2
-                <option value="3"> 3
-                <option value="4"> 4
-                <option value="5"> 5
-                <option value="6"> 6
-                <option value="7"> 7
+            {% for i in range(32) %}
+                <option value="{{ i + 1 }}"> {{ i + 1 }}
+            {% endfor %} 
             </select>
         </div>
     </div>
